--- a/www/debug.html
+++ b/www/debug.html
@@ -22,145 +22,145 @@
 </script>
 
 <script src="debug/console-log-viewer.js"></script>
-<script src="js/lib/howler.js"></script>
-<script src="js/utils/iterateEntries.js"></script>
-<script src="js/utils/iterateSomeEntries.js"></script>
-<script src="js/utils/concatenateProperties.js"></script>
-<script src="js/utils/getFunctionName.js"></script>
-<script src="js/utils/Vectors.js"></script>
-<script src="js/screen/getDevicePixelRatio.js"></script>
-<script src="js/app/Event.js"></script>
+<script src="js/highfivejs/lib/howler.js"></script>
+<script src="js/highfivejs/utils/iterateEntries.js"></script>
+<script src="js/highfivejs/utils/iterateSomeEntries.js"></script>
+<script src="js/highfivejs/utils/concatenateProperties.js"></script>
+<script src="js/highfivejs/utils/getFunctionName.js"></script>
+<script src="js/highfivejs/utils/Vectors.js"></script>
+<script src="js/highfivejs/screen/getDevicePixelRatio.js"></script>
+<script src="js/highfivejs/app/Event.js"></script>
 
-<script src="js/net/resolveAtlasPaths.js"></script>
+<script src="js/highfivejs/net/resolveAtlasPaths.js"></script>
 
-<script src="js/audio/SoundFilesManager.js"></script>
-<script src="js/audio/SoundSpriteManager.js"></script>
+<script src="js/highfivejs/audio/SoundFilesManager.js"></script>
+<script src="js/highfivejs/audio/SoundSpriteManager.js"></script>
 
-<script src="js/render/intern/motion/entity/Line.js"></script>
-<script src="js/render/intern/motion/entity/BezierCurve.js"></script>
+<script src="js/highfivejs/render/intern/motion/entity/Line.js"></script>
+<script src="js/highfivejs/render/intern/motion/entity/BezierCurve.js"></script>
 
-<script src="js/utils/Repository.js"></script>
-<script src="js/resizeutils/changePath.js"></script>
-<script src="js/resizeutils/changeCoords.js"></script>
-<script src="js/resizeutils/changeTouchable.js"></script>
-<script src="js/resizeutils/changeRectangle.js"></script>
-<script src="js/resizeutils/changeMask.js"></script>
-<script src="js/resizeutils/fetchDrawableIntoTouchable.js"></script>
+<script src="js/highfivejs/utils/Repository.js"></script>
+<script src="js/highfivejs/resizeutils/changePath.js"></script>
+<script src="js/highfivejs/resizeutils/changeCoords.js"></script>
+<script src="js/highfivejs/resizeutils/changeTouchable.js"></script>
+<script src="js/highfivejs/resizeutils/changeRectangle.js"></script>
+<script src="js/highfivejs/resizeutils/changeMask.js"></script>
+<script src="js/highfivejs/resizeutils/fetchDrawableIntoTouchable.js"></script>
 
-<script src="js/scene/position/calcScreenConst.js"></script>
-<script src="js/scene/position/add.js"></script>
-<script src="js/scene/position/changeSign.js"></script>
-<script src="js/scene/position/subtract.js"></script>
-<script src="js/scene/position/multiply.js"></script>
-<script src="js/scene/position/zero.js"></script>
-<script src="js/scene/position/wrap.js"></script>
+<script src="js/highfivejs/scene/position/calcScreenConst.js"></script>
+<script src="js/highfivejs/scene/position/add.js"></script>
+<script src="js/highfivejs/scene/position/changeSign.js"></script>
+<script src="js/highfivejs/scene/position/subtract.js"></script>
+<script src="js/highfivejs/scene/position/multiply.js"></script>
+<script src="js/highfivejs/scene/position/zero.js"></script>
+<script src="js/highfivejs/scene/position/wrap.js"></script>
 
-<script src="js/scene/position/Height.js"></script>
-<script src="js/scene/position/Width.js"></script>
-<script src="js/scene/position/Font.js"></script>
+<script src="js/highfivejs/scene/position/Height.js"></script>
+<script src="js/highfivejs/scene/position/Width.js"></script>
+<script src="js/highfivejs/scene/position/Font.js"></script>
 
-<script src="js/render/Transition.js"></script>
+<script src="js/highfivejs/render/Transition.js"></script>
 
-<script src="js/render/intern/draw/entity/RectangleMask.js"></script>
+<script src="js/highfivejs/render/intern/draw/entity/RectangleMask.js"></script>
 
-<script src="js/scene/component/ScreenShaker.js"></script>
+<script src="js/highfivejs/scene/component/ScreenShaker.js"></script>
 
-<script src="js/platform/UniversalTranslator.js"></script>
-<script src="js/platform/addFontToDOM.js"></script>
-<script src="js/platform/requestAnimFrame.js"></script>
-<script src="js/platform/DeviceInfo.js"></script>
-<script src="js/screen/FullScreenController.js"></script>
-<script src="js/screen/OrientationLock.js"></script>
+<script src="js/highfivejs/platform/UniversalTranslator.js"></script>
+<script src="js/highfivejs/platform/addFontToDOM.js"></script>
+<script src="js/highfivejs/platform/requestAnimFrame.js"></script>
+<script src="js/highfivejs/platform/DeviceInfo.js"></script>
+<script src="js/highfivejs/screen/FullScreenController.js"></script>
+<script src="js/highfivejs/screen/OrientationLock.js"></script>
 
-<script src="js/input/entity/Touchable.js"></script>
-<script src="js/input/entity/Touchables.js"></script>
-<script src="js/input/isHit.js"></script>
-<script src="js/input/entity/GamePad.js"></script>
-<script src="js/input/entity/Key.js"></script>
-<script src="js/input/entity/WiiUGamePad.js"></script>
-<script src="js/input/entity/WiiURemote.js"></script>
-<script src="js/input/KeyHandler.js"></script>
-<script src="js/input/GamePadHandler.js"></script>
-<script src="js/input/WiiUGamePadHandler.js"></script>
-<script src="js/input/PointerHandler.js"></script>
-<script src="js/input/TapManager.js"></script>
+<script src="js/highfivejs/input/entity/Touchable.js"></script>
+<script src="js/highfivejs/input/entity/Touchables.js"></script>
+<script src="js/highfivejs/input/isHit.js"></script>
+<script src="js/highfivejs/input/entity/GamePad.js"></script>
+<script src="js/highfivejs/input/entity/Key.js"></script>
+<script src="js/highfivejs/input/entity/WiiUGamePad.js"></script>
+<script src="js/highfivejs/input/entity/WiiURemote.js"></script>
+<script src="js/highfivejs/input/KeyHandler.js"></script>
+<script src="js/highfivejs/input/GamePadHandler.js"></script>
+<script src="js/highfivejs/input/WiiUGamePadHandler.js"></script>
+<script src="js/highfivejs/input/PointerHandler.js"></script>
+<script src="js/highfivejs/input/TapManager.js"></script>
 
-<script src="js/render/intern/measureText.js"></script>
-<script src="js/render/intern/draw/entity/SubImage.js"></script>
-<script src="js/render/intern/draw/entity/ImageWrapper.js"></script>
-<script src="js/render/intern/draw/entity/TextWrapper.js"></script>
-<script src="js/render/intern/draw/entity/Rectangle.js"></script>
-<script src="js/render/intern/draw/entity/Drawable.js"></script>
-<script src="js/render/intern/draw/entity/Drawables.js"></script>
+<script src="js/highfivejs/render/intern/measureText.js"></script>
+<script src="js/highfivejs/render/intern/draw/entity/SubImage.js"></script>
+<script src="js/highfivejs/render/intern/draw/entity/ImageWrapper.js"></script>
+<script src="js/highfivejs/render/intern/draw/entity/TextWrapper.js"></script>
+<script src="js/highfivejs/render/intern/draw/entity/Rectangle.js"></script>
+<script src="js/highfivejs/render/intern/draw/entity/Drawable.js"></script>
+<script src="js/highfivejs/render/intern/draw/entity/Drawables.js"></script>
 
-<script src="js/render/intern/animation/entity/Animation.js"></script>
-<script src="js/render/intern/animation/entity/Animations.js"></script>
-<script src="js/render/intern/motion/entity/Paths.js"></script>
-<script src="js/render/intern/sprite/entity/Sprite.js"></script>
-<script src="js/render/intern/sprite/entity/Sprites.js"></script>
+<script src="js/highfivejs/render/intern/animation/entity/Animation.js"></script>
+<script src="js/highfivejs/render/intern/animation/entity/Animations.js"></script>
+<script src="js/highfivejs/render/intern/motion/entity/Paths.js"></script>
+<script src="js/highfivejs/render/intern/sprite/entity/Sprite.js"></script>
+<script src="js/highfivejs/render/intern/sprite/entity/Sprites.js"></script>
 
-<script src="js/render/intern/CanvasImageCollisionDetector.js"></script>
-<script src="js/render/intern/animation/BasicAnimations.js"></script>
-<script src="js/render/intern/animation/AnimationHelper.js"></script>
-<script src="js/render/intern/animation/AnimationTimer.js"></script>
-<script src="js/render/intern/animation/PropertyAnimations.js"></script>
-<script src="js/render/intern/sprite/SpriteAnimations.js"></script>
-<script src="js/render/intern/sprite/SpriteTimer.js"></script>
-<script src="js/utils/inheritMethods.js"></script>
-<script src="js/render/intern/motion/MotionHelper.js"></script>
-<script src="js/render/intern/motion/MotionTimer.js"></script>
-<script src="js/render/intern/motion/calcLinePoint.js"></script>
-<script src="js/render/intern/motion/calcBezierPoint.js"></script>
-<script src="js/render/intern/motion/Motions.js"></script>
+<script src="js/highfivejs/render/intern/CanvasImageCollisionDetector.js"></script>
+<script src="js/highfivejs/render/intern/animation/BasicAnimations.js"></script>
+<script src="js/highfivejs/render/intern/animation/AnimationHelper.js"></script>
+<script src="js/highfivejs/render/intern/animation/AnimationTimer.js"></script>
+<script src="js/highfivejs/render/intern/animation/PropertyAnimations.js"></script>
+<script src="js/highfivejs/render/intern/sprite/SpriteAnimations.js"></script>
+<script src="js/highfivejs/render/intern/sprite/SpriteTimer.js"></script>
+<script src="js/highfivejs/utils/inheritMethods.js"></script>
+<script src="js/highfivejs/render/intern/motion/MotionHelper.js"></script>
+<script src="js/highfivejs/render/intern/motion/MotionTimer.js"></script>
+<script src="js/highfivejs/render/intern/motion/calcLinePoint.js"></script>
+<script src="js/highfivejs/render/intern/motion/calcBezierPoint.js"></script>
+<script src="js/highfivejs/render/intern/motion/Motions.js"></script>
 
-<script src="js/render/intern/draw/wrapText.js"></script>
-<script src="js/render/intern/draw/renderPolygon.js"></script>
-<script src="js/render/intern/draw/renderImage.js"></script>
-<script src="js/render/intern/draw/renderAtlas.js"></script>
-<script src="js/render/intern/draw/renderText.js"></script>
-<script src="js/render/intern/draw/renderCircle.js"></script>
-<script src="js/render/intern/draw/renderCurve.js"></script>
-<script src="js/render/intern/draw/renderHexagon.js"></script>
-<script src="js/render/intern/draw/renderLine.js"></script>
-<script src="js/render/intern/draw/renderRectangle.js"></script>
-<script src="js/render/intern/draw/Renderer.js"></script>
-<script src="js/render/intern/CallbackTimer.js"></script>
+<script src="js/highfivejs/render/intern/draw/wrapText.js"></script>
+<script src="js/highfivejs/render/intern/draw/renderPolygon.js"></script>
+<script src="js/highfivejs/render/intern/draw/renderImage.js"></script>
+<script src="js/highfivejs/render/intern/draw/renderAtlas.js"></script>
+<script src="js/highfivejs/render/intern/draw/renderText.js"></script>
+<script src="js/highfivejs/render/intern/draw/renderCircle.js"></script>
+<script src="js/highfivejs/render/intern/draw/renderCurve.js"></script>
+<script src="js/highfivejs/render/intern/draw/renderHexagon.js"></script>
+<script src="js/highfivejs/render/intern/draw/renderLine.js"></script>
+<script src="js/highfivejs/render/intern/draw/renderRectangle.js"></script>
+<script src="js/highfivejs/render/intern/draw/Renderer.js"></script>
+<script src="js/highfivejs/render/intern/CallbackTimer.js"></script>
 
-<script src="js/render/Stage.js"></script>
-<script src="js/render/ResizableStage.js"></script>
-<script src="js/render/ImageCache.js"></script>
-<script src="js/render/AtlasCache.js"></script>
+<script src="js/highfivejs/render/Stage.js"></script>
+<script src="js/highfivejs/render/ResizableStage.js"></script>
+<script src="js/highfivejs/render/ImageCache.js"></script>
+<script src="js/highfivejs/render/AtlasCache.js"></script>
 
-<script src="js/input/bootstrap/installOneTimeTap.js"></script>
-<script src="js/screen/Orientation.js"></script>
-<script src="js/utils/range.js"></script>
-<script src="js/scene/component/ButtonFactory.js"></script>
-<script src="js/scene/SceneManager.js"></script>
-<script src="js/scene/myscenes/installMyScenes.js"></script>
-<script src="js/app/GameLoop.js"></script>
+<script src="js/highfivejs/input/bootstrap/installOneTimeTap.js"></script>
+<script src="js/highfivejs/screen/Orientation.js"></script>
+<script src="js/highfivejs/utils/range.js"></script>
+<script src="js/highfivejs/scene/component/ButtonFactory.js"></script>
+<script src="js/highfivejs/scene/SceneManager.js"></script>
+<script src="js/myscenes/installMyScenes.js"></script>
+<script src="js/highfivejs/app/GameLoop.js"></script>
 
 // debug
 <script src="debug/installDebugLoop.js"></script>
 
-<script src="js/render/bootstrap/StageFactory.js"></script>
-<script src="js/render/bootstrap/AtlasResourceHelper.js"></script>
-<script src="js/render/bootstrap/ImageResourceHelper.js"></script>
+<script src="js/highfivejs/render/bootstrap/StageFactory.js"></script>
+<script src="js/highfivejs/render/bootstrap/AtlasResourceHelper.js"></script>
+<script src="js/highfivejs/render/bootstrap/ImageResourceHelper.js"></script>
 <script src="js/MyGameResources.js"></script>
-<script src="js/screen/ResizeHandler.js"></script>
-<script src="js/screen/SimpleLoadingScreen.js"></script>
-<script src="js/screen/OrientationHandler.js"></script>
-<script src="js/screen/FullScreenHandler.js"></script>
-<script src="js/net/ResourceLoader.js"></script>
-<script src="js/platform/bootstrap/installCanvas.js"></script>
-<script src="js/screen/bootstrap/installResize.js"></script>
-<script src="js/screen/bootstrap/installOrientation.js"></script>
-<script src="js/screen/bootstrap/installFullScreen.js"></script>
-<script src="js/input/bootstrap/installPointer.js"></script>
-<script src="js/input/bootstrap/installKeyBoard.js"></script>
-<script src="js/input/bootstrap/installGamePad.js"></script>
-<script src="js/app/EventBus.js"></script>
-<script src="js/app/App.js"></script>
-<script src="js/app/bootstrap/Bootstrapper.js"></script>
+<script src="js/highfivejs/screen/ResizeHandler.js"></script>
+<script src="js/highfivejs/screen/SimpleLoadingScreen.js"></script>
+<script src="js/highfivejs/screen/OrientationHandler.js"></script>
+<script src="js/highfivejs/screen/FullScreenHandler.js"></script>
+<script src="js/highfivejs/net/ResourceLoader.js"></script>
+<script src="js/highfivejs/platform/bootstrap/installCanvas.js"></script>
+<script src="js/highfivejs/screen/bootstrap/installResize.js"></script>
+<script src="js/highfivejs/screen/bootstrap/installOrientation.js"></script>
+<script src="js/highfivejs/screen/bootstrap/installFullScreen.js"></script>
+<script src="js/highfivejs/input/bootstrap/installPointer.js"></script>
+<script src="js/highfivejs/input/bootstrap/installKeyBoard.js"></script>
+<script src="js/highfivejs/input/bootstrap/installGamePad.js"></script>
+<script src="js/highfivejs/app/EventBus.js"></script>
+<script src="js/highfivejs/app/App.js"></script>
+<script src="js/highfivejs/app/bootstrap/Bootstrapper.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
