render sandbox map refs #1 #game

--- a/www/index.html
+++ b/www/index.html
@@ -129,6 +129,10 @@
 <script src="js/highfivejs/utils/range.js"></script>
 <script src="js/highfivejs/scene/component/ButtonFactory.js"></script>
 <script src="js/highfivejs/scene/SceneManager.js"></script>
+
+<!--my scenes-->
+<script src="js/myscenes/PlayGame.js"></script>
+
 <script src="js/myscenes/installMyScenes.js"></script>
 <script src="js/highfivejs/app/GameLoop.js"></script>
 <script src="js/highfivejs/app/bootstrap/installLoop.js"></script>
