move player box refs #1 #game

--- a/www/index.html
+++ b/www/index.html
@@ -131,7 +131,11 @@
 <script src="js/highfivejs/scene/SceneManager.js"></script>
 
 <!--my scenes-->
+<script src="js/myscenes/Entity.js"></script>
+<script src="js/myscenes/PlayerController.js"></script>
+
 <script src="js/myscenes/PlayGame.js"></script>
+<!--my scenes end-->
 
 <script src="js/myscenes/installMyScenes.js"></script>
 <script src="js/highfivejs/app/GameLoop.js"></script>
