all the screens #2 #game

--- a/www/index.html
+++ b/www/index.html
@@ -131,10 +131,20 @@
 <script src="js/highfivejs/scene/SceneManager.js"></script>
 
 <!--my scenes-->
-<script src="js/myscenes/Entity.js"></script>
-<script src="js/myscenes/PlayerController.js"></script>
+<script src="js/myscenes/model/Entity.js"></script>
+<script src="js/myscenes/model/PlayerController.js"></script>
+<script src="js/myscenes/model/Camera.js"></script>
+<script src="js/myscenes/model/createDefaultViewPort.js"></script>
+<script src="js/myscenes/model/StartPositions.js"></script>
+<script src="js/myscenes/model/World.js"></script>
+<script src="js/myscenes/model/WorldBuilder.js"></script>
+<script src="js/myscenes/model/createWorld.js"></script>
 
+<script src="js/myscenes/SplashScreen.js"></script>
+<script src="js/myscenes/ChoosePlaneScreen.js"></script>
+<script src="js/myscenes/ChooseGameScreen.js"></script>
 <script src="js/myscenes/PlayGame.js"></script>
+<script src="js/myscenes/EndScreen.js"></script>
 <!--my scenes end-->
 
 <script src="js/myscenes/installMyScenes.js"></script>
