play first simple complete game round with score #2 #game

--- a/www/index.html
+++ b/www/index.html
@@ -131,6 +131,7 @@
 <script src="js/highfivejs/scene/SceneManager.js"></script>
 
 <!--my scenes-->
+<script src="js/myscenes/model/GameMode.js"></script>
 <script src="js/myscenes/model/Entity.js"></script>
 <script src="js/myscenes/model/PlayerController.js"></script>
 <script src="js/myscenes/model/Camera.js"></script>
